# tguydroid

./: .gitignore  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android_build.yml
app/: build.gradle
app/src/androidTest/java/com/wirtos/tguydroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tguydroid.c
app/src/main/java/com/wirtos/tguydroid/: MainActivity.java  TGuy.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wirtos/tguydroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
